feat(appointment): add tests